--- a/src/Jenkinsfile
+++ b/src/Jenkinsfile
@@ -1,1 +1,36 @@
 
+
+pipeline {
+    agent any
+
+    environment {
+        AWS_DEFAULT_REGION = 'us-east-1'
+        S3_BUCKET = 'dev-jayaraj-01'
+    }
+
+    stages {
+        stage('Checkout') {
+            steps {
+                git branch: 'main',
+                    url: 'https://github.com/prabhajayaraj/demo-frontend-webhosting',
+                    credentialsId: 'frontend'
+            }
+        }
+
+        stage('Build React') {
+            steps {
+                sh 'chmod +x build.sh'
+                sh './build.sh'
+            }
+        }
+
+        stage('Deploy to S3 & Invalidate CloudFront') {
+            steps {
+                withAWS(credentials: 'aws-credentials', region: 'us-east-1') {
+                    sh 'aws s3 sync build/ s3://$S3_BUCKET --delete'
+                    sh 'aws cloudfront create-invalidation --distribution-id E38MNKXRCVLOIR --paths "/*"'
+                }
+            }
+        }
+    }
+}
